# thr_infrastructure

./: .gitignore  README.md
common_packages/thr_coop_assembly/: CMakeLists.txt  README.md  package.xml
common_packages/thr_coop_assembly/action/: RunMDPAction.action
common_packages/thr_coop_assembly/config/: README.md  abilities.json  action_params.json  mdp_robot_mapping.json  perception.json  poses.json  scenes.yaml
common_packages/thr_coop_assembly/launch/: action_server_concurrent.launch  action_server_sequential.launch  autonomous.launch  concurrent_action_server.launch  manual.launch  perception.launch
common_packages/thr_coop_assembly/msg/: Action.msg  ActionHistoryEvent.msg  Command.msg  MDPAction.msg  Predicate.msg  RobotAction.msg
common_packages/thr_coop_assembly/scripts/: action_server.py  human_activity_recognizer.py  interaction_controller.py  scene_state_manager.py
common_packages/thr_coop_assembly/scripts/action_server/: sequential_action_server.py
common_packages/thr_coop_assembly/scripts/display/: concurrent_action_display.py  concurrent_debug_display.py
common_packages/thr_coop_assembly/scripts/interaction_controllers/: keyboard_interaction_controller_concurrent_romeo.py  keyboard_interaction_controller_concurrent_toolbox.py  (+1 more)
common_packages/thr_coop_assembly/src/: interaction_controller.py
common_packages/thr_coop_assembly/srv/: GetNextAction.srv  SetNewTrainingExample.srv  SetReward.srv
common_packages/thr_learner_predictor/: CMakeLists.txt  package.xml
common_packages/thr_learner_predictor/config/: reward.g  toolbox.g
common_packages/thr_learner_predictor/scripts/: concurrent_hardcoded_learner_predictor.py  concurrent_planner_learner_predictor.py  concurrent_policy_player_learner_predictor.py  concurrent_preferences_learner_predictor.py  sequential_hardcoded_learner_predictor.py  sequential_random_learner_predictor.py
thr_action_server/: CMakeLists.txt  package.xml  setup.py
thr_action_server/config/: README.md  abilities.json  action_params.json  decision_action_mapping.json  seeds.json
thr_action_server/launch/: action_server_concurrent.launch
thr_action_server/scripts/: decision_server.py  mdp_action_server.py  robot_action_server.py
thr_action_server/src/thr_actions/: __init__.py  action.py  bring.py  carry.py  give.py  go_home.py  go_to_js.py  grasp.py  hold.py  pick.py  place.py  turn.py
thr_action_server/src/thr_decisions/: __init__.py  carry.py  go_to_js.py  pick.py
thr_display/: package.xml
thr_display/scripts/: concurrent_action_display.py  concurrent_debug_display.py
thr_experiments/: README.md  (+1 more)
thr_experiments/thr_xp_human_comfort/: CMakeLists.txt  package.xml
thr_experiments/thr_xp_human_comfort/config/: Consentement.docx  forced_conditions.yaml  grid_vizualizer.rviz  permutations.json  recorded_frames.yaml  shapeo_calibration.yaml  shapeo_home_pose.json  shapes.yaml
thr_experiments/thr_xp_human_comfort/launch/: feedback_interface.launch  fit_records.launch  grid_recorder.launch  handing_over.launch  planner_experiment.launch  run_experiment.launch  shapeo_calibration.launch  start_interaction_server.launch  start_recorder.launch  visualize_grid.launch  visualize_welding_pose.launch  welding_simulation.launch
thr_experiments/thr_xp_human_comfort/notebooks/: analyse_posture.ipynb  analyze_welding_results.ipynb  calculate_reba.ipynb  insertion_checking.ipynb  record_home_pose.ipynb  survey_analysis.ipynb
thr_experiments/thr_xp_human_comfort/scripts/: fit_record  grid_vizualizer  human_comfort_experiment  load_user  planner_experiment  record_grid  record_human_calibration  record_insertion_poses  record_shapeo_calibration  shapeo_publisher  sync_results  welding_pose_visualizer  welding_task_experiment
thr_infrastructure/thr_infrastructure_msgs/: package.xml
thr_infrastructure/thr_infrastructure_msgs/action/: RunRobotAction.action
thr_infrastructure/thr_infrastructure_msgs/msg/: RobotAction.msg
thr_infrastructure/thr_infrastructure_msgs/srv/: GetNextAction.srv  GetSceneState.srv  UpdateRelationalState.srv
thr_infrastructure/thr_scene_state_manager/: CMakeLists.txt  package.xml
thr_infrastructure/thr_scene_state_manager/config/: perception.json
thr_infrastructure/thr_scene_state_manager/launch/: perception.launch
thr_infrastructure/thr_scene_state_manager/scripts/: concurrent_scene_state_manager.py  human_activity_recognizer.py
thr_infrastructure/thr_scenes/: CMakeLists.txt  package.xml
thr_infrastructure/thr_scenes/config/: scenes.yaml
thr_infrastructure_msgs/: CMakeLists.txt
thr_infrastructure_msgs/action/: RunDecision.action
thr_infrastructure_msgs/msg/: ActionHistoryEvent.msg  Decision.msg  Predicate.msg  PredictedPlan.msg  SceneState.msg
thr_infrastructure_msgs/srv/: GetCarryPose.srv  GetNextAction.srv  GetNextDecision.srv  SetNewTrainingExample.srv  StartStopEpisode.srv
thr_interaction_controller/: package.xml
thr_interaction_controller/launch/: autonomous.launch  geo_logic_predictor.launch  manual.launch
thr_interaction_controller/scripts/: interaction_controller.py  interaction_controller_gestures.py  interaction_controller_independent.py  interaction_controller_phablet.py
thr_interaction_controller/scripts/keyboard_interaction_controllers/: keyboard_interaction_controller_concurrent_pobax.py  keyboard_interaction_controller_concurrent_romeo.py  keyboard_interaction_controller_concurrent_shapeo.py  keyboard_interaction_controller_concurrent_toolbox.py
thr_learner_predictor/: CMakeLists.txt  package.xml
thr_learner_predictor/config/: toolbox.g
thr_learner_predictor/scripts/: concurrent_gesture_learner_predictor.py  concurrent_gestures_learner_predictor_toolbox.py  concurrent_hardcoded_learner_predictor.py  concurrent_hardcoded_learner_predictor_toolbox.py  concurrent_planner_learner_predictor.py  concurrent_policy_player_learner_predictor.py  concurrent_preferences_learner_predictor.py  concurrent_preferences_learner_predictor_toolbox.py  concurrent_teleoperated_learner_predictor_toolbox.py  geo_logic_learner_predictor.py  geo_logic_planner_predictor.py
(+58 files in other folders)
