<?xml version="1.0"?>
<package>
  <name>thr_action_server</name>
  <version>0.0.0</version>
  <description>Action servers executing Decisions (non-blocking, always successful, triggering a robot activity) as well as Robot activities (one robot server for each arm, blocking, might fail)</description>

  <maintainer email="yoan.mollard@inria.fr">Yoan Mollard</maintainer>
  <license>GPL3</license>

  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>
  <build_depend>baxter_commander</build_depend>
  <run_depend>baxter_commander</run_depend>
  <build_depend>thr_scenes</build_depend>
  <run_depend>thr_scenes</run_depend>
  <build_depend>thr_infrastructure_msgs</build_depend>
  <run_depend>thr_infrastructure_msgs</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
 
  <export>
  </export>
</package>
