<?xml version="1.0"?>
<package>
  <name>thr_display</name>
  <version>0.0.0</version>
  <description>Display managers for displaying instructions on the robot's screen</description>

  <maintainer email="yoan.mollard@inria.fr">Yoan Mollard</maintainer>
  <license>GPL3</license>

  <build_depend>thr_infrastructure_msgs</build_depend>
  <run_depend>thr_infrastructure_msgs</run_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>
  <build_depend>baxter_commander</build_depend>
  <run_depend>baxter_commander</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>thr_infrastructure_msgs</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
 
  <export>
  </export>
</package>
