<?xml version="1.0"?>
<package>
  <name>thr_interaction_controller</name>
  <version>0.0.0</version>
  <description>Interaction controllers describing the behaviour of the robot depending on the scene and actions/inputs from the human</description>

  <maintainer email="yoan.mollard@inria.fr">Yoan Mollard</maintainer>
  <license>GPL3</license>
  
  <build_depend>thr_scenes</build_depend>
  <run_depend>thr_scenes</run_depend>
  <build_depend>thr_infrastructure_msgs</build_depend>
  <run_depend>thr_infrastructure_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>thr_action_server</run_depend>  <!-- To know the correspondency Decision -> Robot action -->
  <buildtool_depend>catkin</buildtool_depend>
 
  <export>
  </export>
</package>
