<?xml version="1.0"?>
<package>
  <name>thr_learner_predictor</name>
  <version>0.0.0</version>
  <description>Activity Learner and Predictor</description>

  <maintainer email="yoan.mollard@inria.fr">Yoan Mollard</maintainer>
  <maintainer email="thibaut.munzer@inria.fr">Thibaut Munzer</maintainer>
  <license>GPL3</license>
  
  <build_depend>thr_scenes</build_depend>
  <run_depend>thr_scenes</run_depend>
  <build_depend>thr_infrastructure_msgs</build_depend>
  <run_depend>thr_infrastructure_msgs</run_depend>
  <build_depend>geo_logic_planner</build_depend>
  <run_depend>geo_logic_planner</run_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
 
  <export>
  </export>
</package>
