<?xml version="1.0"?>
<package>
  <name>thr_learner_predictor</name>
  <version>0.0.0</version>
  <description>Action Learner and predictor for thr_coop_assembly</description>

  <maintainer email="yoan.mollard@inria.fr">Yoan Mollard</maintainer>
  <maintainer email="thibaut.munzer@inria.fr">Thibaut Munzer</maintainer>
  <license>TODO</license>

  <build_depend>thr_coop_assembly</build_depend>
  <build_depend>message_runtime</build_depend>

  <run_depend>thr_coop_assembly</run_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
 
  <export>
  </export>
</package>
