<?xml version="1.0"?>
<package>
  <name>thr_xp_human_comfort</name>
  <version>0.0.0</version>
  <description>The thr_xp_human_comfort package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="buschbapti@todo.todo">buschbapti</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/thr_xp_human_comfort</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>reba_optim</build_depend>
  <build_depend>human_moveit_config</build_depend>
  <build_depend>kinect_skeleton_publisher</build_depend>
  <build_depend>optitrack_publisher</build_depend>
  <build_depend>baxter_commander</build_depend>
  <build_depend>recorder</build_depend>
  <build_depend>thr_action_server</build_depend>
  <build_depend>thr_infrastructure_msgs</build_depend>
  <build_depend>thr_learner_predictor</build_depend>
  <build_depend>thr_scene_state_manager</build_depend>
  <build_depend>thr_display</build_depend>
  <build_depend>thr_interaction_controller</build_depend>
  <build_depend>thr_scenes</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>reba_optim</run_depend>
  <run_depend>human_moveit_config</run_depend>
  <run_depend>kinect_skeleton_publisher</run_depend>
  <run_depend>optitrack_publisher</run_depend>
  <run_depend>baxter_commander</run_depend>
  <run_depend>recorder</run_depend>
  <run_depend>thr_action_server</run_depend>
  <run_depend>thr_infrastructure_msgs</run_depend>
  <run_depend>thr_learner_predictor</run_depend>
  <run_depend>thr_scene_state_manager</run_depend>
  <run_depend>thr_display</run_depend>
  <run_depend>thr_interaction_controller</run_depend>
  <run_depend>thr_scenes</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>