<?xml version="1.0"?>
<package>
  <name>thr_infrastructure_msgs</name>
  <version>0.0.0</version>
  <description>Messages services and action files used for the packages within thr_infrastructure</description>

  <maintainer email="yoan.mollard@inria.fr">Yoan Mollard</maintainer>
  <license>GPL3</license>

  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
 
  <export>
  </export>
</package>
