<?xml version="1.0"?>
<package>
  <name>thr_scenes</name>
  <version>0.0.0</version>
  <description>Description of the scenes (use cases) available with the THR infrastructure</description>

  <maintainer email="yoan.mollard@inria.fr">Yoan Mollard</maintainer>
  <license>GPL3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
 
  <export>
  </export>
</package>
